--- a/timer/index.html
+++ b/timer/index.html
@@ -27,7 +27,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 루니의 공부관리 앱</p>
+    <p>&copy; 2025 studynotes 공부관리 앱</p>
   </footer>
 
   <script src="script.js"></script>
