공부 통계 그래프 추가

--- a/timer/index.html
+++ b/timer/index.html
@@ -21,9 +21,13 @@
     </section>
 
     <section id="statistics-section">
-      <h2>오늘 통계</h2>
-      <p>오늘 총 공부 시간: <span id="daily-total">0h 0m</span></p>
-    </section>
+  <h2>오늘 통계</h2>
+  <p>오늘 총 공부 시간: <span id="daily-total">0h 0m</span></p>
+
+  <div class="graph-box">
+    <div id="study-graph"></div>
+  </div>
+</section>
   </main>
 
   <footer>
