--- a/todo/todo.html
+++ b/todo/todo.html
@@ -11,7 +11,7 @@
         <h1>스터디 할 일 목록</h1>
 
         <input type="text" id="todo-input" placeholder="새로운 스터디 항목 입력">
-        <button onclick="addTodo()">추가</button>
+        <button id="add-button">추가</button>
 
         <ul id="todo-list"></ul>
     </div>
