--- a/timer/index.html
+++ b/timer/index.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>공부 타이머</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>⏱️ 공부 타이머 - studynotes</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>공부 타이머 & 통계</h1>
+    <h1>⏱️ 공부 타이머</h1>
   </header>
 
   <main>
-    <section id="timer-section">
-      <h2>타이머</h2>
-      <p id="time-display">00:00:00</p>
-      <button id="start-btn">시작</button>
-      <button id="pause-btn">일시정지</button>
-      <button id="stop-btn">저장 후 정지</button>
-      <button id="reset-btn">리셋</button>
+    <section id="timer-section" aria-labelledby="timer-heading">
+      <h2 id="timer-heading">타이머</h2>
+      <p id="time-display">00:00:00.00</p>
+
+      <div class="btn-row" role="group" aria-label="타이머 컨트롤">
+        <button id="start-btn" type="button">시작</button>
+        <button id="pause-btn" type="button">일시정지</button>
+        <button id="stop-btn" type="button">저장 후 정지</button>
+        <button id="reset-btn" type="button">리셋</button>
+      </div>
     </section>
 
-    <section id="statistics-section">
-  <h2>오늘 통계</h2>
-  <p>오늘 총 공부 시간: <span id="daily-total">0h 0m</span></p>
+    <section id="statistics-section" aria-labelledby="stats-heading">
+      <h2 id="stats-heading">오늘 통계</h2>
+      <p id="daily-total">00:00:00.00</p>
 
-  <div class="graph-box">
-    <div id="study-graph"></div>
-  </div>
-</section>
+      <div class="graph-box" aria-hidden="true">
+        <div id="study-graph" class="graph-bar"></div>
+      </div>
+      <!-- 그래프 기준은 JS에서 추가(또는 HTML에 직접 적어도 됨) -->
+    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 studynotes 공부관리 앱</p>
+    <p>© 2025 studynotes 공부관리 앱</p>
   </footer>
 
   <script src="script.js"></script>
