--- a/todo/todo.html
+++ b/todo/todo.html
@@ -2,32 +2,19 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Study Todo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>나의 스터디 TODO 목록</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="todo-container">
+        <h1>스터디 할 일 목록</h1>
 
-<<<<<<< HEAD
         <input type="text" id="todo-input" placeholder="새로운 스터디 항목 입력">
         <button id="add-button">추가</button>
-=======
-<div class="app-container">
-    <div class="todo-box">
-        <h1>📅 STUDY TODO</h1>
->>>>>>> c1fda56 (오류 수정)
 
-        <div id="input-area">
-            <input type="text" id="todo-input" placeholder="할 일 입력...">
-            <button id="add-button">추가</button>
-        </div>
-    </div>
-
-    <div class="list-box">
-        <h2>나의 할 일</h2>
         <ul id="todo-list"></ul>
     </div>
-</div>
 
-<script src="script.js"></script>
 </body>
-</html>
+</html
