--- a/todo/todo.html
+++ b/todo/todo.html
@@ -24,5 +24,31 @@
 </div>
 
 <script src="script.js"></script>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <title>Study Todo</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<div class="app-container">
+    <div class="todo-box">
+        <h1>📅 STUDY TODO</h1>
+
+        <div id="input-area">
+            <input type="text" id="todo-input" placeholder="할 일 입력...">
+            <button id="add-button">추가</button>
+        </div>
+    </div>
+
+    <div class="list-box">
+        <h2>나의 할 일</h2>
+        <ul id="todo-list"></ul>
+    </div>
+</div>
+
+<script src="./todo/script.js"></script>
 </body>
 </html>
