--- a/todo/todo.html
+++ b/todo/todo.html
@@ -11,7 +11,7 @@
     <div class="todo-box">
         <h1>📅 STUDY TODO</h1>
 
-        <div id="input-area">
+        <div id="my-todo-list">
             <input type="text" id="todo-input" placeholder="할 일 입력...">
             <button id="add-button">추가</button>
         </div>
@@ -19,7 +19,7 @@
 
     <div class="list-box">
         <h2>나의 할 일</h2>
-        <ul id="todo-list"></ul>
+        <ul id="my-todo-list"></ul>
     </div>
 </div>
 
@@ -32,22 +32,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<div class="app-container">
-    <div class="todo-box">
-        <h1>📅 STUDY TODO</h1>
-
-        <div id="input-area">
-            <input type="text" id="todo-input" placeholder="할 일 입력...">
-            <button id="add-button">추가</button>
-        </div>
-    </div>
-
-    <div class="list-box">
-        <h2>나의 할 일</h2>
-        <ul id="todo-list"></ul>
-    </div>
-</div>
 
 <script src="./todo/script.js"></script>
 </body>
