--- a/todo/todo.html
+++ b/todo/todo.html
@@ -12,8 +12,8 @@
         <h1>📅 STUDY TODO</h1>
 
         <div id="my-todo-list">
-            <input type="text" id="todo-input" placeholder="할 일 입력...">
-            <button id="add-button">추가</button>
+            <input type="text" id="todoInput" placeholder="할 일 입력...">
+            <button id="addButton">추가</button>
         </div>
     </div>
 
