--- a/todo/todo.html
+++ b/todo/todo.html
@@ -7,32 +7,19 @@
 </head>
 <body>
 
-<div class="app-container">
-    <div class="todo-box">
-        <h1>📅 STUDY TODO</h1>
+<div class="todo-box">
+    <h1>📅 STUDY TODO</h1>
 
-        <div id="my-todo-list">
-            <input type="text" id="todo-input" placeholder="할 일 입력...">
-            <button id="add-button">추가</button>
-        </div>
-    </div>
-
-    <div class="list-box">
-        <h2>나의 할 일</h2>
-        <ul id="my-todo-list"></ul>
+    <div id="input-area"> <input type="text" id="todo-input" placeholder="할 일 입력...">
+        <button id="add-button">추가</button>
     </div>
 </div>
 
-<script src="script.js"></script>
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Study Todo</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<div class="list-box">
+    <h2>나의 할 일</h2>
+    <ul id="my-todo-list"></ul> 
+</div>
 
-    <script src="./todo/script.js"></script>
+<script src="./todo/script.js"></script>
 </body>
 </html>
