--- a/todo/todo.html
+++ b/todo/todo.html
@@ -20,6 +20,6 @@
     <ul id="my-todo-list"></ul> 
 </div>
 
-<script src="./todo/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
