--- a/todo/todo.html
+++ b/todo/todo.html
@@ -6,18 +6,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="app-container">
 
-<div class="todo-box">
-    <h1>📅 STUDY TODO</h1>
+    <div class="todo-box">
+        <h1>📅 STUDY TODO</h1>
 
-    <div id="input-area"> <input type="text" id="todo-input" placeholder="할 일 입력...">
-        <button id="add-button">추가</button>
+        <div id="input-area">
+            <input type="text" id="todo-input" placeholder="할 일 입력...">
+            <button id="add-button">추가</button>
+        </div>
     </div>
-</div>
 
-<div class="list-box">
-    <h2>나의 할 일</h2>
-    <ul id="my-todo-list"></ul> 
+    <div class="list-box">
+        <h2>나의 할 일</h2>
+        <ul id="my-todo-list"></ul> 
+    </div>
+
 </div>
 
 <script src="script.js"></script>
