--- a/todo/todo.html
+++ b/todo/todo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Study Todo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./todo/style.css">
 </head>
 <body>
 
@@ -26,5 +26,5 @@
 </div>
 
 <!-- JS는 body 끝에 두어 DOM 로딩 보장 -->
-<script src="script.js"></script>
+<script src="./todo/script.js"></script>
 
