--- a/todo/todo.html
+++ b/todo/todo.html
@@ -3,27 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <title>My To-Do & Memo</title>
+    <title>스터디 할 일 목록 & 메모</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <header class="header">
-            <div class="category-header">
-                <span class="category-icon">📱</span>
-                <span class="category-title">일반</span>
-                <button class="add-category-btn">+</button>
-            </div>
-        </header>
-
         <section class="todo-section">
-            <ul id="todo-list" class="list-group">
-                </ul>
+            <h2>✔️ 스터디 할 일 목록</h2>
             <div class="add-todo-area">
-                <input type="text" id="new-todo-input" placeholder="새 To-Do 항목 추가...">
+                <input type="text" id="new-todo-input" placeholder="새 할 일을 입력하세요">
                 <button id="add-todo-btn">추가</button>
             </div>
+            <ul id="todo-list" class="list-group">
+                </ul>
         </section>
 
         <hr>
@@ -41,20 +33,5 @@
     </div>
 
     <script src="script.js"></script>
-=======
-    <title>나의 스터디 TODO 목록</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="todo-container">
-        <h1>스터디 할 일 목록</h1>
-
-        <input type="text" id="todo-input" placeholder="새로운 스터디 항목 입력">
-        <button id="add-button">추가</button>
-
-        <ul id="todo-list"></ul>
-    </div>
-
->>>>>>> 2eda2a182768db144b44c5ee11039806a837ddef
 </body>
-</html
+</html>
