--- a/todo/todo.html
+++ b/todo/todo.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>스터디 할 일 목록 & 메모</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <title>Study To-Do</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
     <div class="container">
-        <section class="todo-section">
-            <h2>✔️ 스터디 할 일 목록</h2>
-            <div class="add-todo-area">
-                <input type="text" id="new-todo-input" placeholder="새 할 일을 입력하세요">
-                <button id="add-todo-btn">추가</button>
-            </div>
-            <ul id="todo-list" class="list-group">
-                </ul>
-        </section>
 
-        <hr>
+        <h1>📚 스터디 할 일</h1>
 
-        <section class="memo-section">
-            <h2>📝 메모 / 일기</h2>
-            <div class="memo-form">
-                <input type="text" id="memo-title-input" placeholder="제목">
-                <textarea id="memo-content-input" placeholder="내용을 작성하세요..." rows="5"></textarea>
-                <button id="save-memo-btn">저장</button>
-            </div>
-            <div id="memo-list" class="list-group memo-list-group">
-                </div>
-        </section>
+        <div class="todo-input-area">
+            <input id="todoInput" type="text" placeholder="새 할 일을 입력하세요" />
+            <button id="addBtn">추가</button>
+        </div>
+
+        <ul id="todoList"></ul>
+
+        <h2>📝 메모 / 일기</h2>
+
+        <div class="memo-card">
+            <input id="memoTitle" type="text" placeholder="제목 입력" class="memo-title" />
+            <textarea id="memoContent" placeholder="내용을 작성하세요..."></textarea>
+            <button id="saveMemoBtn" class="save-btn">저장</button>
+        </div>
+
     </div>
 
     <script src="script.js"></script>
