--- a/todo/index.html
+++ b/todo/index.html
@@ -1,31 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8" />
-    <title>Study To-Do</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <title>모던 투두리스트</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="container">
-
-        <h1>📚 스터디 할 일</h1>
-
-        <div class="todo-input-area">
-            <input id="todoInput" type="text" placeholder="새 할 일을 입력하세요" />
-            <button id="addBtn">추가</button>
-        </div>
-
+        <h1>📚 스터디 투두리스트</h1>
+        <input id="todoInput" type="text" placeholder="할 일을 입력하고 Enter를 누르세요">
         <ul id="todoList"></ul>
-
-        <h2>📝 메모 / 일기</h2>
-
-        <div class="memo-card">
-            <input id="memoTitle" type="text" placeholder="제목 입력" class="memo-title" />
-            <textarea id="memoContent" placeholder="내용을 작성하세요..."></textarea>
-            <button id="saveMemoBtn" class="save-btn">저장</button>
-        </div>
-
     </div>
 
     <script src="script.js"></script>
