--- a/main-page/index.html
+++ b/main-page/index.html
@@ -2,23 +2,26 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>Study Notes</title>
-  <link rel="stylesheet" href="css/main.css">
+  <title>Study Notes - Main</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
-  <div class="container">
+  <header>
     <h1>📘 Study Notes</h1>
-    <p class="subtitle">공부를 관리하는 올인원 웹</p>
+    <p>나만의 공부 관리 웹사이트</p>
+  </header>
 
-    <div class="menu">
-      <a href="../note/index.html">📝 NOTE</a>
-      <a href="../todo/index.html">✅ TODO</a>
-      <a href="../timer/index.html">⏱ TIMER</a>
-      <a href="../calendar/index.html">📅 CALENDAR</a>
-    </div>
-  </div>
+  <main class="menu">
+    <a href="../note/index.html" class="card">📝 NOTE</a>
+    <a href="../todo/index.html" class="card">✅ TODO</a>
+    <a href="../timer/index.html" class="card">⏱ TIMER</a>
+    <a href="../calendar/index.html" class="card">📅 CALENDAR</a>
+  </main>
 
-  <script src="js/main.js"></script>
+  <footer>
+    <p>© 2025 StudyNotes Project</p>
+  </footer>
+
 </body>
 </html>
