--- a/main-page/index.html
+++ b/main-page/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <main class="menu">
-    <a href="../note/index.html" class="card">📝 NOTE</a>
+    <a href="../notes/index.html" class="card">📝 NOTE</a>
     <a href="../todo/index.html" class="card">✅ TODO</a>
     <a href="../timer/index.html" class="card">⏱ TIMER</a>
     <a href="../calendar/index.html" class="card">📅 CALENDAR</a>
