메인 페이지 footer 변경

--- a/main-page/index.html
+++ b/main-page/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>Study Notes - Main</title>
+  <title>Study Notes</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
   </main>
 
   <footer>
-    <p>© 2025 StudyNotes Project</p>
+    <p>© 2025 Study Notes 공부관리 앱</p>
   </footer>
 
 </body>
