math 페이지 내용 및 페이지 구성 수정

--- a/math/index.html
+++ b/math/index.html
@@ -1,65 +1,29 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>미분적분학 — 개념 정리</title>
-
-  <!-- 스타일 -->
-  <link rel="stylesheet" href="style.css" />
-
-  <!-- marked.js (Markdown -> HTML) -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>미적분학 노트</title>
+  <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-
-  <!-- highlight.js (코드 하이라이팅, optional) -->
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/default.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
-
-  <!-- MathJax (LaTeX 수식 렌더링) -->
-  <script>
-    window.MathJax = {
-      tex: { inlineMath: [['$', '$'], ['\\(', '\\)']], tags: 'ams' },
-      svg: { fontCache: 'global' }
-    };
+  <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 </head>
 <body>
-  <div class="app">
-    <aside class="sidebar">
-      <div class="brand">
-        <h1>📘 미분적분학 (Calculus)</h1>
-        <p class="sub">핵심 개념 & 공식 요약</p>
-      </div>
 
-      <div class="controls">
-        <input id="search-toc" type="text" placeholder="목차 검색...">
-        <button id="toggle-raw">원문 보기</button>
-      </div>
+  <header>
+    <h1>미적분학 개념 노트</h1>
+  </header>
 
-      <div class="toc">
-        <h3>목차</h3>
-        <ul id="toc-list"></ul>
-      </div>
+  <div class="calc-layout">
 
-    </aside>
+    <!-- 왼쪽 네비게이션 -->
+    <nav id="calc-nav" class="calc-nav"></nav>
 
-    <main class="content">
-      <header class="content-header">
-        <h2 id="page-title">미분적분학 — 개념 정리</h2>
-        <div class="actions">
-          <button id="download-md">MD 다운로드</button>
-        </div>
-      </header>
+    <!-- 오른쪽 내용 -->
+    <main id="calc-content" class="calc-content"></main>
 
-      <article id="markdown-body" class="markdown-body"></article>
-
-      <div id="raw-container" class="raw hidden">
-        <h3>원본 Markdown</h3>
-        <pre id="raw-text"></pre>
-      </div>
-    </main>
   </div>
 
   <script src="script.js"></script>
