--- a/notes/index.html
+++ b/notes/index.html
@@ -21,7 +21,10 @@
       <a href="../main-page/index.html">🏠 메인 페이지로 돌아가기</a>
     </div>
   </div>
+  
+  <footer>
+    <p>© 2025 Study Notes 공부관리 앱</p>
+  </footer>
 
 </body>
 </html>
-<a href="../main-page/index.html">← 메인으로 돌아가기</a>
