메인으로 돌아가기 문구 수정

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -25,7 +25,11 @@
   <section id="list-section">
     <h2>등록된 시험</h2>
     <ul id="exam-list"></ul>
+     <div class="back">
+        <a href="../main-page/index.html">🏠 메인 페이지로 돌아가기</a>
+        </div>
   </section>
+
 </main>
 
 <footer>
@@ -35,4 +39,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-<a href="../main-page/index.html">← 메인으로 돌아가기</a>
