--- a/timer/index.html
+++ b/timer/index.html
@@ -34,6 +34,9 @@
 
   <h3>📌 공부 기록</h3>
   <ul id="study-log"></ul>
+  <div class="back">
+        <a href="../main-page/index.html">🏠 메인 페이지로 돌아가기</a>
+        </div>
 </section>
 
   </main>
@@ -45,4 +48,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-<a href="../main-page/index.html">← 메인으로 돌아가기</a>
