--- a/todo/index.html
+++ b/todo/index.html
@@ -20,9 +20,15 @@
             <textarea id="memoContent" placeholder="내용을 작성하세요"></textarea>
             <button id="saveMemoBtn">저장</button>
         </div>
+
+        <div class="back">
+        <a href="../main-page/index.html">🏠 메인 페이지로 돌아가기</a>
+        </div>
     </div>
 
     <script src="script.js"></script>
 </body>
+<footer>
+    <p>© 2025 Study Notes 공부관리 앱</p>
+  </footer>
 </html>
-<a href="../main-page/index.html">← 메인으로 돌아가기</a>
