note 페이지 head 제목 변경

--- a/notes/index.html
+++ b/notes/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>Notes</title>
+  <title>📝 NOTE</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
