todo 페이지 head 제목 변경

--- a/todo/index.html
+++ b/todo/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>스터디 투두리스트 + 메모</title>
+    <title>✅ TODO</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
