--- a/timer/index.html
+++ b/timer/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>⏱️ 공부 타이머 - studynotes</title>
+  <title>⏱ TIMER</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
