--- a/calendar/index.html
+++ b/calendar/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>시험 일정 캘린더</title>
+  <title>📅 CALENDAR</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
